zeta-code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__persistent_queue.snap
---
source: zeta-code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 80, 20)"
---
  ≡ .                       [+]                            [— / —] [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  Queue 1: Run the focused tests · next                                         
  Queue 2: Review the result · paused                                           
⠋ Starting · 0m 00s total                                                       
  ⏸ ask permissions on                                                          
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │ >                                                                        │  
  ╰──────────────────────────────────────────────────────── Automatic model ─╯  
                                                                                
  Enter send  ·  shift+tab permissions  ·  /home
