zeta-code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__slash_popup_clears_covered_transcript_rows_edge_to_edge.snap
---
source: zeta-code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, terminal_area.width, terminal_area.height)"
---
  ≡ .                       [+]                            [— / —] [Dashboard]  
                                                                                
● Model invocation failed 8 underlying transcript content underlying transcript 
content underlying transcript content underlying transcript content             
                                                                                
● Model invocation failed 9 underlying transcript content underlying transcript 
content underlying transcript content underlying transcript content             
                                                                                
  ────────────────────────────────────────────────────────────────────────────  
  /status                    show the active session, thread, and model         
  /statusline                choose the items shown in the status line          
  /skills                    browse configured skill sources                    
  /memories                  manage memories, reading consent and model saving  
  /mcp                       list configured MCP tools                          
  /resume                    list or resume a saved session                     
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │ > /                                                                      │  
  ╰─────────────────────────────────────────────────── Claude Sonnet (high) ─╯  
                                                                                
  Enter send  ·  shift+tab permissions  ·  /home
